# git-SCV

./: .gitignore  CHANGELOG.md  Cargo.toml  HERMES.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  USAGE.md
docs/: APPROVAL_GATES.md  ARCHITECTURE_MAP.md  ARTIFACT_CONTRACT.md  CASE_PACKAGES.md  CLIPPY_POLICY.md  FUTURE_PACKAGE_MANAGERS.md  HERMES.md  IMPLEMENTATION_STATUS_2026-06-29.md  RC_ACCEPTANCE.md  RC_BLOCKERS.md  RC_STATUS.md  RELEASE.md  SCRIPT_RELATIONSHIPS.md  SECURITY_MODEL.md  SUPPORTED_SURFACES.md  THREAT_MODEL.md  VISUALIZATION.md  agent-guide.md  dashboard.html  future-install-channels.md
schemas/: agent_receipt.schema.json  analysis_content_export.schema.json  analysis_jobs.schema.json  analysis_plan.schema.json  architecture_map.schema.json  artifact_manifest.schema.json  brief.schema.json  cleanup_manifest.schema.json  codex_invocation_receipt.schema.json  connection_graph.schema.json  coverage.schema.json  cross_unit_analysis.schema.json  dependencies.schema.json  evidence.schema.json  findings.schema.json  followup_plan.schema.json  gate_decisions.schema.json  gates.schema.json  inventory.schema.json  reachability_scenarios.schema.json  relation_map.schema.json  review.schema.json  run.schema.json  sectors.schema.json  security.schema.json  sensitive.schema.json  slices.schema.json  source.schema.json  source_landmarks.schema.json  supported_surfaces.schema.json  synthesis.schema.json  unit_analysis.schema.json  visualization_index.schema.json  work_order_binding.schema.json  worker_backend.schema.json
scripts/: git-scv-hermes.sh  git-scv-worker-adapter.example.py
src/: analysis_runtime.rs  artifacts.rs  brief.rs  case.rs  cli.rs  dependencies.rs  detect.rs  errors.rs  evidence.rs  findings.rs  gates.rs  github_remote.rs  graph.rs  (+24 more)
(+33 files in other folders)
