[package]
name = "git-scv"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust workflow harness for evidence-backed source code review."
readme = "README.md"

# Keep dependencies small. Do not add process-spawning crates.
[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
gix = { version = "0.70", default-features = false, features = ["status"] }
time = { version = "0.3", features = ["formatting"] }

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
