[package]
name = "git-scv"
version = "0.3.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust workflow harness for evidence-backed source code review."
readme = "README.md"
repository = "https://github.com/vetyj2/git-SCV"
include = [
  "/Cargo.lock",
  "/Cargo.toml",
  "/CHANGELOG.md",
  "/LICENSE-APACHE",
  "/LICENSE-MIT",
  "/HERMES.md",
  "/README.md",
  "/SECURITY.md",
  "/USAGE.md",
  "/docs/**",
  "/fixtures/**",
  "/rust-toolchain.toml",
  "/schemas/**",
  "/scripts/**",
  "/src/**",
  "/tests/**",
]

# Keep dependencies small. Do not add process-spawning crates.
[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
gix = { version = "0.70", default-features = false, features = ["status"] }
time = { version = "0.3", features = ["formatting"] }
sha2 = "0.11.0"
ureq = "3.3.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
tar = "0.4.46"
flate2 = "1.1.9"
libc = "0.2.186"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
